Add upload photo/video functional Add notification functional Fix booking functional

--- a/.gitignore
+++ b/.gitignore
@@ -67,3 +67,39 @@ dkms.conf
 /TravelSite/TravelSite/wwwroot/uploads/Грузия_u5xho4cv.ra1.jpg
 /TravelSite/TravelSite.Data/bin/Debug/net8.0
 /TravelSite/TravelSite.Data/obj
+/TravelSite/TravelSite/bin/Debug/net8.0/TravelSite.deps.json
+/TravelSite/TravelSite/bin/Debug/net8.0/TravelSite.staticwebassets.runtime.json
+/TravelSite/TravelSite/wwwroot/uploads/photo/2_loonxvgd.5zq.jpg
+/TravelSite/TravelSite/wwwroot/uploads/photo/sd_eccsp3jw.rje.jpg
+/TravelSite/TravelSite/wwwroot/uploads/photo/Батуми_aen35jlg.w00.webp
+/TravelSite/TravelSite/wwwroot/uploads/photo/Батуми_avxnp55c.on4.webp
+/TravelSite/TravelSite/wwwroot/uploads/photo/Батуми_n0rsvj5j.c0g.jpg
+/TravelSite/TravelSite/wwwroot/uploads/photo/Батуми_xfta5kop.zo2.jpg
+/TravelSite/TravelSite/wwwroot/uploads/photo/Грузия_20gmjziy.abv.jpg
+/TravelSite/TravelSite/wwwroot/uploads/photo/Грузия_2c1tfv35.s2q.jpg
+/TravelSite/TravelSite/wwwroot/uploads/photo/Грузия_4heqjtf5.0ue.jpg
+/TravelSite/TravelSite/wwwroot/uploads/photo/Грузия_52sdtole.2k4.jpg
+/TravelSite/TravelSite/wwwroot/uploads/photo/Грузия_ae2gwjsx.0li.jpg
+/TravelSite/TravelSite/wwwroot/uploads/photo/Грузия_cgivhjan.14t.jpg
+/TravelSite/TravelSite/wwwroot/uploads/photo/Грузия_hxsyjxhj.ajs.jpg
+/TravelSite/TravelSite/wwwroot/uploads/photo/Грузия_ocp2mx4y.j15.jpg
+/TravelSite/TravelSite/wwwroot/uploads/photo/Грузия_r0mv54uy.ols.jpg
+/TravelSite/TravelSite/wwwroot/uploads/photo/Грузия_rjjrocys.cp4.jpg
+/TravelSite/TravelSite/wwwroot/uploads/photo/Грузия_u5xho4cv.ra1.jpg
+/TravelSite/TravelSite/wwwroot/uploads/photo/Кутаиси_cvfvpqku.s2i.jpeg
+/TravelSite/TravelSite/wwwroot/uploads/photo/Кутаиси_fpxc2hwk.amc.jpeg
+/TravelSite/TravelSite/wwwroot/uploads/photo/Кутаиси_m1wolphj.re2.webp
+/TravelSite/TravelSite/wwwroot/uploads/photo/Кутаиси_mmtua0xd.x2q.jpeg
+/TravelSite/TravelSite/wwwroot/uploads/photo/Кутаиси_qerbwnkz.qlx.jpeg
+/TravelSite/TravelSite/wwwroot/uploads/photo/Кутаиси_six34kpg.smr.webp
+/TravelSite/TravelSite/wwwroot/uploads/photo/Кутаиси_vj0s51cd.g2r.jpg
+/TravelSite/TravelSite/wwwroot/uploads/photo/Поти_oa1oknr0.v42.jpg
+/TravelSite/TravelSite/wwwroot/uploads/photo/Поти_qth2cenf.auk.jpg
+/TravelSite/TravelSite/wwwroot/uploads/photo/Поти_rtcfemds.acm.jpg
+/TravelSite/TravelSite/wwwroot/uploads/photo/Поти_u3u4atog.pys.jpg
+/TravelSite/TravelSite/wwwroot/uploads/photo/Сухум_trmylfhj.iqd.jpg
+/TravelSite/TravelSite/wwwroot/uploads/photo/Тбилиси_04pqe1x2.5kg.webp
+/TravelSite/TravelSite/wwwroot/uploads/photo/Тбилиси_4weri4rn.wex.jpg
+/TravelSite/TravelSite/wwwroot/uploads/photo/Тбилиси_o3xxg3uw.ukg.jpg
+/TravelSite/TravelSite/wwwroot/uploads/photo/Тбилиси_rj5glbpg.4of.jpg
+/TravelSite/TravelSite/wwwroot/uploads/video/Грузия_s4o4qyim.dry.mp4
