--- a/TravelSite/TravelSite/TravelSite.csproj
+++ b/TravelSite/TravelSite/TravelSite.csproj
@@ -21,7 +21,9 @@
     <PackageReference Include="AutoMapper" Version="14.0.0" />
     <PackageReference Include="Bootstrap.v3.Datetimepicker" Version="4.17.49" />
     <PackageReference Include="Bootstrap.v3.Datetimepicker.CSS" Version="4.17.49" />
+    <PackageReference Include="GleamTech.FileUltimate" Version="9.6.4" />
     <PackageReference Include="jQuery" Version="3.7.1" />
+    <PackageReference Include="Microsoft.AspNet.Mvc" Version="5.3.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.5">
       <PrivateAssets>all</PrivateAssets>
@@ -32,6 +34,10 @@
 
   <ItemGroup>
     <ProjectReference Include="..\TravelSite.Data\TravelSite.Data.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="wwwroot\uploads\video\" />
   </ItemGroup>
 
 </Project>
