--- a/TravelSite/TravelSite/TravelSite.csproj
+++ b/TravelSite/TravelSite/TravelSite.csproj
@@ -23,6 +23,7 @@
     <PackageReference Include="Bootstrap.v3.Datetimepicker.CSS" Version="4.17.49" />
     <PackageReference Include="GleamTech.FileUltimate" Version="9.6.4" />
     <PackageReference Include="jQuery" Version="3.7.1" />
+    <PackageReference Include="MailKit" Version="4.13.0" />
     <PackageReference Include="Microsoft.AspNet.Mvc" Version="5.3.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.5">
@@ -38,6 +39,7 @@
 
   <ItemGroup>
     <Folder Include="wwwroot\uploads\video\" />
+    <Folder Include="wwwroot\etc\" />
   </ItemGroup>
 
 </Project>
