--- a/TravelSite/TravelSite/TravelSite.csproj
+++ b/TravelSite/TravelSite/TravelSite.csproj
@@ -36,6 +36,8 @@
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.20.1" />
     <PackageReference Include="Moment.js" Version="2.30.1" />
+    <PackageReference Include="NLog" Version="6.0.6" />
+    <PackageReference Include="NLog.Web.AspNetCore" Version="6.1.0" />
   </ItemGroup>
 	
   <ItemGroup>
